Initial commit - MERN practice code

--- a/3.javascript/index.html
+++ b/3.javascript/index.html
@@ -12,9 +12,17 @@
     <script src="./string.js"></script>
     <script src="./array-method.js"></script>
     <script src="./array_reference.js"></script> -->
-    <script src="./typeconversion.js"></script>
+    <!-- <script src="./typeconversion.js"></script>
     <script src="function.js"></script>
     <script src="./17.closure.js"></script>
+    <script src="./21.prototypes.js"></script>
+    <script src="./sync_async.js"></script>
+    <script src="setTimeout.js"></script>
+    <script src="setInterval.js"></script>
+     -->
+    <!-- <script src="./24.callback_hell.js"></script> -->
+    <!-- <script src="./Question.js"></script> -->
+    <script src="./28.try_catch.js"></script>
 </head>
 <body>
     
